<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.caferestaurantsystem.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_restaurant_menu"
        android:name="com.example.caferestaurantsystem.ui.RestaurantMenu.RestaurantMenuFragment"
        android:label="@string/nav_menu_restaurant_menu"
        tools:layout="@layout/fragment_restaurant_menu" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.caferestaurantsystem.ui.Profile.ProfileFragment"
        android:label="@string/nav_menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_my_order"
        android:name="com.example.caferestaurantsystem.ui.Order.OrderFragment"
        android:label="@string/nav_menu_order"
        tools:layout="@layout/fragment_order" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.caferestaurantsystem.ui.MyCart.MyCartFragment"
        android:label="@string/nav_menu_cart"
        tools:layout="@layout/fragment_my_cart" />

    <fragment
        android:id="@+id/nav_manager"
        android:name="com.example.caferestaurantsystem.ui.manager.ManagerFragment"
        android:label="Manager"
        tools:layout="@layout/fragment_nav_manager" />

</navigation>